[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
reqwest = "0.11.10"
stable-eyre = "0.2"
scraper = "0.13"
urlparse = "0.7"
